tests/samples/negative/types/slice_invalid_object.ax
module slice_invalid_object;

fn main() -> i32 {
    let bad = missing[:];
    return 0;
}
